--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ backcall==0.1.0
 beautifulsoup4==4.6.3
 bleach==2.1.3
 blinker==1.3
-Brlapi==0.6.4
+Brlapi
 bs4==0.0.1
 chardet==2.3.0
 checkbox-support==0.22
