--- a/requirements.txt
+++ b/requirements.txt
@@ -43,7 +43,7 @@ jupyter-client==5.2.3
 jupyter-console==5.2.0
 jupyter-core==4.4.0
 kiwisolver==1.0.1
-louis==2.6.4
+louis
 lxml==3.5.0
 Mako==1.0.3
 MarkupSafe==0.23
