--- a/requirements.txt
+++ b/requirements.txt
@@ -74,7 +74,7 @@ pycups==1.9.73
 pycurl==7.43.0
 pydub==0.22.1
 Pygments==2.2.0
-pygobject==3.20.0
+pygobject
 PyJWT==1.3.0
 pymongo==3.7.1
 PyMySQL==0.9.2
