--- a/requirements.txt
+++ b/requirements.txt
@@ -80,7 +80,7 @@ pymongo==3.7.1
 PyMySQL==0.9.2
 pyparsing==2.0.3
 pyspeech==0.0.0
-python-apt==1.1.0b1
+python-apt==1.1.0
 python-dateutil==2.7.3
 python-debian==0.1.27
 python-magic==0.4.15
